contrib/sidecar.yaml
kind: List
apiVersion: v1
items:
# Create a cinder-proxy service account and ensure it will use the route "cinder"
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: cinder-proxy
    annotations:
      serviceaccounts.openshift.io/oauth-redirectreference.primary: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"cinder"}}'
# Create a cluster role binding to allow for token reviews w/ cinder-proxy sa
- apiVersion: authorization.openshift.io/v1
  kind: ClusterRoleBinding
  metadata:
    name:  cinder-proxy-binding
  subjects:
  - kind: ServiceAccount
    name: cinder-proxy
    namespace: wshed
    apiGroup: rbac.authorization.k8s.io
  roleRef:
    kind: ClusterRole
    name: system:auth-delegator
    namespace: wshed
    apiGroup: rbac.authorization.k8s.io
# Create a secure connection to the cinder-proxy via a route
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: cinder
  spec:
    to:
      name: cinder
    tls:
      termination: Reencrypt
- apiVersion: v1
  kind: Service
  metadata:
    name: cinder
    annotations:
      service.alpha.openshift.io/serving-cert-secret-name: cinder-tls
  spec:
    ports:
    - name: cinder
      port: 443
      targetPort: 8443
    selector:
      app: cinder
# Launch a proxy as a sidecar
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: cinder
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: cinder
    template:
      metadata:
        labels:
          app: cinder
      spec:
        serviceAccountName: cinder-proxy
        containers:
        - name: cinder-proxy
          image: openshift/oauth-proxy:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8443
            name: public
          args:
          - --https-address=:8443
          - --provider=openshift
          - --openshift-service-account=cinder-proxy
          - --openshift-delegate-urls={"/v2":{"resource":"projects","verb":"list"}}
          - --upstream=http://10.19.115.219:8776
          - --tls-cert=/etc/tls/private/tls.crt
          - --tls-key=/etc/tls/private/tls.key
          - --cookie-secret=CINDER
          volumeMounts:
          - mountPath: /etc/tls/private
            name: cinder-tls
#        - name: app
#          image: openshift/hello-openshift:latest
#          ports:
#          - containerPort: 8776
        volumes:
        - name: cinder-tls
          secret:
            secretName: cinder-tls
